--- a/mic-service-cloud-dept-provider-7003/pom.xml
+++ b/mic-service-cloud-dept-provider-7003/pom.xml
@@ -89,6 +89,13 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+        <!--mybatis-plus 引入 -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
