--- a/mic-service-cloud-user-comsumer-feign/pom.xml
+++ b/mic-service-cloud-user-comsumer-feign/pom.xml
@@ -24,6 +24,13 @@
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<artifactId>mic-service-cloud-api</artifactId>
+			<groupId>com.seven.chenhaijun</groupId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -45,10 +52,7 @@
 			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-feign</artifactId>
-		</dependency>
+
 	</dependencies>
 
 	<build>
