--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,13 @@
         <module>mic-service-cloud-user-provider-8001</module>
         <module>mic-service-cloud-user-provider-8002</module>
         <module>mic-service-cloud-user-provider-8003</module>
+        <module>mic-service-cloud-user-provider-hystrix</module>
         <module>mic-service-cloud-dept-provider-7001</module>
         <module>mic-service-cloud-dept-provider-7002</module>
         <module>mic-service-cloud-dept-provider-7003</module>
         <module>mic-service-cloud-user-comsumer-8000</module>
         <module>mic-service-cloud-user-comsumer-feign</module>
+        <module>mic-service-cloud-user-comsumer-hystrix</module>
         <module>mic-service-cloud-eureka-server-9000</module>
         <module>mic-service-cloud-eureka-server-9001</module>
         <module>mic-service-cloud-eureka-server-9002</module>
